# ShatteredEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  functions.cmake  options.cmake  os_detection.cmake
ShatteredEngine/: CMakeLists.txt
ShatteredEngine/Core/: Game.cpp  Game.h  Initialize.cpp  Initialize.h  Window.cpp  Window.h
ShatteredEngine/Geometry/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
ShatteredEngine/Utils/: Logs.cpp  Logs.h
ShatteredEngine_Testing/: CMakeLists.txt  MainGame.cpp  MainGame.h  main.cpp
ShatteredEngine_Testing/Default/: main.cpp
ShatteredEngine_Testing/WinAPI/: main.cpp
ShatteredEngine_Testing/WinRT/: SDL_winrt_main_NonXAML.cpp  WinRTmain.cpp
ShatteredEngine_Testing/src/: MainGame.cpp  MainGame.h  main.cpp
cmake/: options.cmake  os_detection.cmake
libs/UWP/ARM/: SDL2.lib  bgfx-shared-libRelease.lib
libs/UWP/x64/: SDL2.lib  bgfx-shared-libRelease.lib
libs/UWP/x86/: SDL2.lib  bgfx-shared-libRelease.lib
libs/Windows/x64/: SDL2.lib  SDL2main.lib  bgfx-shared-libRelease.lib
libs/Windows/x86/: SDL2.lib  SDL2main.lib  bgfx-shared-libRelease.lib
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Initialize.cpp  Initialize.h
src/Utils/: CMakeLists.txt  Logs.cpp  Logs.h
third-parties/: CMakeLists.txt
